# weather-data-pipeline

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
bruin/: .bruin.yml  Dockerfile  pipeline.yml
bruin/assets/ingestion/: ingest_ghcn_yearly.py  ingest_stations.py  requirements.txt
bruin/assets/quality/: validate_marts.sql  validate_raw_daily.sql  validate_stations.sql
bruin/assets/transform/: mart_daily_weather.sql  mart_monthly_summary.sql  mart_prediction_features.sql  stg_daily_observations.sql  stg_stations.sql
dashboard/: metabase_setup.sql
dbt/weather_dbt/: dbt_project.yml  profiles.yml
dbt/weather_dbt/macros/: convert_temperature.sql
dbt/weather_dbt/models/marts/: mart_daily_weather.sql  mart_monthly_summary.sql  mart_prediction_features.sql  schema.yml
dbt/weather_dbt/models/sources/: sources.yml
dbt/weather_dbt/models/staging/: schema.yml  stg_daily_observations.sql  stg_stations.sql
docker/: init-db.sql
ingestion/: Dockerfile  ingest_ghcn.py  requirements.txt
kafka/: requirements.txt  weather_consumer.py  weather_producer.py
kestra/flows/: weather_backfill.yml  weather_daily_pipeline.yml
spark/: weather_features.py
streamlit/: Dockerfile  app.py  pipeline.py  requirements.txt
terraform/: main.tf  variables.tf
